# robot_constraint_manager

./: CMakeLists.txt  README.md
.github/scripts/macos/: install_prerequisites.sh
.github/scripts/ubuntu/: install_qpoases.sh
.github/workflows/: cpp_build.yml  cpp_build_macos.yml  main.yml  ubuntu_unit_tests.yml
cfg/: vfi_constraints.yaml
devel/compose_coppeliasim_tests/: compose.yaml
devel/ubuntu_dev/: Dockerfile
examples/panda/: panda.ttt
examples/panda_example/: CMakeLists.txt  panda_example.cpp  panda_example.ttt
examples/panda_example/cfg/: vfi_constraints.yaml  vfi_constraints_2.yaml  vfi_constraints_3.yaml
examples/panda_example_old_format/: CMakeLists.txt  panda_example_old_format.cpp
include/dqrobotics_extensions/robot_constraint_manager/: checkers.hpp  constraints_manager.hpp  conversions.hpp  data_recorder.hpp  numpy.hpp  robot_constraint_manager.hpp  utils.hpp  vfi_framework.hpp  vfi_manager.hpp
src/: test.cpp
src/dqrobotics_extensions/robot_constraint_manager/: checkers.cpp  constraints_manager.cpp  conversions.cpp  data_recorder.cpp  numpy.cpp  robot_constraint_manager.cpp  utils.cpp  vfi_framework.cpp  vfi_manager.cpp
tests/: unit_tests.cpp
